[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["axbo_extensions"]

[project]
name = "axbo_extensions"
version = "1.4.0"
description = "Ax/BoTorch GLUE for multi-fidelity + robust optimization."
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ax-platform==1.3.1",
    "botorch==0.18.1",
    "pydantic>=2.0",
    "numpy",
    "sympy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "ruff",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
